fix: placeholder layout shift issue for select components

--- a/packages/components/src/components/custom-select/custom-select.scss
+++ b/packages/components/src/components/custom-select/custom-select.scss
@@ -7,6 +7,12 @@
 @use "../../styles/internal/select-components";
 @use "../../styles/dialog-init";
 
+.db-custom-select-placeholder {
+	position: absolute;
+	inset-block-start: 0;
+	inset-inline-start: 0;
+}
+
 .db-custom-select {
 	--db-form-component-padding-inline-end: calc(
 		#{select-components.$select-icon-padding} + #{variables.$db-sizing-sm} +
